Update Clients List

--- a/V1.0/assets/css/main.css
+++ b/V1.0/assets/css/main.css
@@ -2707,8 +2707,8 @@ contact-float-left{
 .clients .client-item img {
   max-width: 100%;
   transition: all 0.3s ease-in-out;
-  filter: grayscale(100);
-  opacity: 0.8;
+  /*filter: grayscale(100);*/
+  opacity: 0.6;
 }
 
 .clients .client-item:hover {
