--- a/V1.0/assets/css/main.css
+++ b/V1.0/assets/css/main.css
@@ -2926,6 +2926,10 @@ section,
   align-items: center;    /* Changed for vertical centering */
   background-repeat: no-repeat;
   background-size: cover;
+  padding-bottom: 20px;
+}
+.slider .swiper-slide-block {
+  margin-bottom: 20px;
 }
 
 .slider .swiper-slide::before {
