Img slider home page

--- a/V1.0/assets/css/main.css
+++ b/V1.0/assets/css/main.css
@@ -2930,6 +2930,8 @@ section,
 }
 .slider .swiper-slide-block {
   margin-bottom: 5px;
+  /*background-color: #ee5d9e3d;
+  border-radius: 5px;*/
 }
 
 .slider .swiper-slide::before {
